# octokeyz

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: assets.yml  main.yml  pages.yml
3d-models/: CMakeLists.txt  enclosure-back.scad  enclosure-back.stl  enclosure-front.scad  enclosure-front.stl  led-holder.stl  pcb-spacer.stl  settings.scad
3d-models/b8/: enclosure-back.scad  enclosure-back.stl  enclosure-front.scad  enclosure-front.stl  led-holder.scad  settings.scad
3d-models/b8-mega/: base.scad  base.stl  enclosure-back.scad  enclosure-back.stl  enclosure-front-display.scad  enclosure-front-display.stl  enclosure-front-switches.scad  enclosure-front-switches.stl  led-holder.scad  led-holder.stl  settings.scad
3d-models/lib/: led-holder.scad  screw-base.scad  ssd1306.scad
3d-models/octokeyz/: enclosure-back.scad  enclosure-back.stl  enclosure-front.scad  enclosure-front.stl  led-holder.scad  led-holder.stl  settings.scad
3d-models/octokeyz-mega/: base.scad  base.stl  enclosure-back.scad  enclosure-back.stl  enclosure-front-display.scad  enclosure-front-display.stl  enclosure-front-switches.scad  enclosure-front-switches.stl  led-holder.scad  settings.scad  test.scad
3d-models/prototype/: enclosure-back.scad  enclosure-back.stl  enclosure-front.scad  pcb-spacer.scad  settings.scad
build-aux/: ibom.sh
cmake/: git-version-gen.cmake
cmake/cpack/: LICENSE  install_license_and_readme.cmake  install_version.cmake  install_version.cmake.in
cmake/cpack/files/: README.txt.in
docs/: 00_index.md  10_octokeyz.md  20_octokeyz-mega.md  30_firmware.md  40_client-libraries.md
firmware/: CMakeLists.txt  STM32F042KxTx_FLASH.ld  bits.h  bootloader.c  bootloader.h  descriptors.c  display-font.h  display.c  display.h  idle.c  idle.h  led.c  main.c  octokeyz.wara  serialnumber.c  serialnumber.h  usbconfig.h
firmware/b8/: b8.wara  main.c  usbconfig.h
firmware/b8-mega/: CMakeLists.txt  STM32F042K6Tx_FLASH.ld  b8-mega.wara  descriptors.c  display-font.h  display.c  display.h  led.c  led.h  main.c  usb-watchdog.c  usb-watchdog.h
firmware/cmake/: avr-toolchain.cmake  avr.cmake
firmware/octokeyz/: CMakeLists.txt  bits.h  main.c  serialnumber.c  serialnumber.h  usbconfig.h
firmware/octokeyz-mega/: CMakeLists.txt  bootloader.c  bootloader.h  descriptors.c  display.c  display.h  led.c  led.h  main.c  octokeyz-mega.wara  usb-watchdog.c  usb-watchdog.h
go/b8/: LICENSE  b8.go  button.go  device.go  display.go  event.go  go.mod  go.sum  handler.go  led.go  modifier.go  sysfs.go
go/b8/internal/usb/: usb.go  usb_linux.go  usb_windows.go
go/b8/internal/usbhid/: device.go  device_linux.go  device_windows.go
go/octokeyz/: button.go  device.go  display.go  go.mod  go.sum  modifier.go  octokeyz.go
pcb/: CMakeLists.txt  b8.kicad_pcb  b8.kicad_pro  b8.kicad_sch  preset.json  sym-lib-table
pcb/b8/: b8.kicad_pcb  b8.kicad_pro  b8.kicad_sch  fp-lib-table  sym-lib-table
pcb/b8-mega/: b8-mega.kicad_pcb  b8-mega.kicad_pro  b8-mega.kicad_sch  fp-lib-table
pcb/lib/: LICENSE  custom.kicad_sym  octokeyz.kicad_sym
pcb/lib/3d-models/: CP_Radial_D5.0mm_P2.50mm_Horizontal.FCStd  CP_Radial_D5.0mm_P2.50mm_Horizontal.step  SW_PUSH-12mm.FCStd  SW_PUSH-12mm.step
pcb/lib/b8.pretty/: CP_Radial_D5.0mm_P2.50mm_Horizontal.kicad_mod  C_TDK_FA26.kicad_mod  C_TDK_FA28.kicad_mod  R_YAGEO_MFR-25FTE52_Horizontal.kicad_mod  SW_Cherry_MX_1.00u_PCB.kicad_mod  SW_PUSH-12mm.kicad_mod  USB_Mini-B_PTH.kicad_mod
pcb/lib/custom.pretty/: CP_Radial_D5.0mm_P2.50mm_Horizontal.kicad_mod  RND_205-00862.kicad_mod  SW_PUSH-12mm.kicad_mod
pcb/lib/octokeyz.pretty/: CP_Radial_D5.0mm_P2.50mm_Horizontal.kicad_mod  C_TDK_FA26.kicad_mod  C_TDK_FA28.kicad_mod  R_YAGEO_MFR-25FTE52_Horizontal.kicad_mod  SW_Cherry_MX_1.00u_PCB.kicad_mod  SW_PUSH-12mm.kicad_mod  USB_Mini-B_PTH.kicad_mod
pcb/octokeyz/: config.yml  fp-lib-table  octokeyz.kicad_pcb  octokeyz.kicad_pro  octokeyz.kicad_sch  sym-lib-table
pcb/octokeyz-double/: octokeyz-double.kicad_pcb  octokeyz-double.kicad_pro  octokeyz-double.kicad_sch  octokeyz-double.kicad_sch.bkp
pcb/octokeyz-mega/: config.yml  fp-lib-table  octokeyz-mega.kicad_pcb  octokeyz-mega.kicad_pro  octokeyz-mega.kicad_sch
share/: CMakeLists.txt
share/udev/: 60-b8.rules  60-octokeyz.rules
